workloads/bapttf-front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bapttf-front
  namespace: bapttf-front
spec:
  selector:
    app: bapttf-front
  ports:
    - port: 80
      targetPort: 80
