workloads/bapttf-front/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bapttf-front
  namespace: bapttf-front
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bapttf.com`)
      kind: Rule
      services:
        - name: bapttf-front
          port: 80
  tls: {}
